# test

./: .clangd  .env.example  .gitignore  .gitmodules  ADBC_BUILD_FIX.md  ATTACH_IMPLEMENTATION_PLAN.md  BUILD.md  BUILD_FIXES.md  CMakeLists.txt  CORRECT_BUILD_FIX.md  DEVELOPMENT_PLAN.md  DISK_SPACE_FIX.md  Makefile  PERMANENT_BUILD_FIXES.md  README.md  SNOWFLAKE_EXTENSION.md  TESTING_GUIDE.md  USAGE.md  WORKFLOW_CHANGES.md  adbc_build_config.json  compile_commands.json  fix-rpath.md  run_tests.sh  test-rpath.sh  vcpkg.json  verbose
.github/workflows/: ExtensionTemplate.yml  ExtensionTemplate.yml.backup  FastBuildTest.yml  MainDistributionPipeline.yml  build.yml  custom-build.yml  test-build.yml
docs/: ATTACH_IMPLEMENTATION_PLAN.md  PROJECT_STATUS.md  PUSHDOWN_IMPLEMENTATION_PLAN.md  SNOWFLAKE_EXTENSION.md  TYPE_CONVERSION.md  adbc-arrow.md
scripts/: build_adbc.sh  robust_build.sh  setup_dev.sh  setup_intellisense.sh  simple_build.sh  test-cmake-local.sh  test-local.sh  test-vcpkg-deps.sh  validate-deps.sh  validate_workflows.sh
src/: snowflake_arrow_utils.cpp  snowflake_attach.cpp  snowflake_catalog_set.cpp  snowflake_client.cpp  snowflake_client_manager.cpp  snowflake_config.cpp  snowflake_connection.cpp  snowflake_extension.cpp  snowflake_functions.cpp  snowflake_scan.cpp  snowflake_schema_set.cpp  snowflake_secret_provider.cpp  snowflake_secrets.cpp  snowflake_storage.cpp  snowflake_transaction.cpp  snowflake_types.cpp  snowflake_utils.cpp
src/include/: snowflake_arrow_utils.hpp  snowflake_attach.hpp  snowflake_catalog.hpp  snowflake_catalog_set.hpp  snowflake_client.hpp  snowflake_client_manager.hpp  snowflake_config.hpp  snowflake_connection.hpp  snowflake_debug.hpp  snowflake_extension.hpp  snowflake_functions.hpp  snowflake_options.hpp  snowflake_scan.hpp  snowflake_schema_entry.hpp  snowflake_schema_set.hpp  snowflake_secret_provider.hpp  snowflake_secrets.hpp  snowflake_storage.hpp  snowflake_table_set.hpp  snowflake_transaction.hpp  snowflake_types.hpp  snowflake_utils.hpp
src/include/storage/: snowflake_catalog.hpp  snowflake_catalog_scan.hpp  snowflake_catalog_set.hpp  snowflake_schema_entry.hpp  snowflake_schema_set.hpp  snowflake_storage.hpp  snowflake_table_entry.hpp  snowflake_table_set.hpp
src/storage/: snowflake_catalog.cpp  snowflake_catalog_scan.cpp  snowflake_catalog_set.cpp  snowflake_schema_entry.cpp  snowflake_schema_set.cpp  snowflake_storage.cpp  snowflake_table_entry.cpp  snowflake_table_set.cpp
test/: test_snowflake_client.cpp
test/cpp/: Makefile  test_client_methods.cpp
test/sql/: decimal_to_int_test.sql  snowflake.test  snowflake_attach_storage.test  snowflake_integration.test  test_attach_with_schemas.test  test_list_schemas.test
test/sql_disabled/: snowflake.test  snowflake_client_advanced.test  snowflake_client_manager.test  test_attach_with_schemas.test  test_list_schemas.test
vcpkg/scripts/buildsystems/: vcpkg.cmake
